# digital_dashboard

./: .gitignore  CMakeLists.txt  NOTICE  README.md  WIDGET_CONFIGURATION.md  app_config.cpp  carplay_stream.cpp  carplay_widget.cpp  command_line_args.cpp  config.cpp  config.h  config.yaml  config_circle_tachometer.yaml  decode_thread.cpp  dongle_driver.cpp  dongle_driver.h  main.cpp  main_window.cpp  resources.qrc  serialization_examples  speed_publisher.cpp  test_data_publisher.cpp  test_messages.cpp  widgets_mainwindow.cpp  widgets_mainwindow.h
dashboard/: CMakeLists.txt  app_config.cpp  main_window.cpp  resources.qrc
dashboard/dashboard/: app_config.cpp  command_line_args.cpp  main.cpp  main_window.cpp
dashboard/editor/: canvas.cpp  editor_window.cpp  main.cpp  properties_panel.cpp  selection_frame.cpp  widget_palette.cpp
dashboard/include/: app_config.h  main_window.h
dashboard/include/dashboard/: app_config.h  cached_paint_widget.h  command_line_args.h  expression_subscription.h  gauge_painting.h  main_window.h  widget_factory.h  widget_fonts.h  widget_types.h
dashboard/include/editor/: canvas.h  editor_window.h  properties_panel.h  selection_frame.h  widget_palette.h  widget_registry.h  widget_registry_list.h
dashboard/widgets/: CMakeLists.txt
dashboard/widgets/background_rect/: CMakeLists.txt  background_rect.cpp
dashboard/widgets/carplay/: CMakeLists.txt  audio_ring.cpp  carplay_widget.cpp  ffprobe_output  libusb_helpers.cpp  message.cpp  metal_renderer.mm  test_messages.cpp
dashboard/widgets/mercedes_190e_cluster_gauge/: CMakeLists.txt  mercedes_190e_cluster_gauge.cpp
dashboard/widgets/mercedes_190e_speedometer/: CMakeLists.txt  mercedes_190e_speedometer.cpp
dashboard/widgets/mercedes_190e_tachometer/: CMakeLists.txt  mercedes_190e_tachometer.cpp
dashboard/widgets/mercedes_190e_telltales/: CMakeLists.txt  battery_telltale.cpp  telltale.cpp
dashboard/widgets/motec_c125_tachometer/: CMakeLists.txt  motec_c125_tachometer.cpp
dashboard/widgets/motec_cdl3_tachometer/: CMakeLists.txt  motec_cdl3_tachometer.cpp
dashboard/widgets/now_playing/: CMakeLists.txt  now_playing.cpp
dashboard/widgets/sparkline/: CMakeLists.txt  sparkline.cpp
dashboard/widgets/static_text/: CMakeLists.txt  static_text.cpp
dashboard/widgets/value_readout/: CMakeLists.txt  value_readout.cpp
dashboard_editor/: CMakeLists.txt  resources.qrc
dashboard_editor/include/dashboard_editor/: canvas.h  editor_constants.h  editor_window.h  palette_list.h  properties_panel.h  selection_frame.h  (+3 more)
dashboard_editor/src/: canvas.cpp  canvas.h  editor_window.cpp  editor_window.h  main.cpp  palette_list.cpp  properties_panel.cpp  selection_frame.cpp  selection_overlay.cpp  widget_palette.cpp
libs/: CMakeLists.txt
libs/airplay/: CMakeLists.txt  aac_decoder.cpp  crypto.cpp  nalu.cpp  plist.cpp  receiver.cpp  rtsp.cpp  srp.cpp  test_aac.cpp  test_crypto.cpp  test_nalu.cpp  test_plist.cpp  test_tlv8.cpp  timing.cpp  tlv8.cpp
libs/apple_mfi_ic/: CMakeLists.txt  apple_mfi_demo.cpp  apple_mfi_ic.cpp
libs/apple_usb/: CMakeLists.txt  lockdown.cpp  muxd.cpp  ncm_bridge.cpp  usb_device.cpp  usbmuxd_server.cpp
libs/canopen/: CMakeLists.txt
libs/core/: CMakeLists.txt  core.cpp
libs/dbc_parser/: CMakeLists.txt
libs/expression_parser/: CMakeLists.txt  expression_parser.cpp  schema_registry.cpp  session_manager.cpp  test_expression_parser.cpp
libs/helpers/: CMakeLists.txt
libs/i2c_bus/: CMakeLists.txt  i2c_bus.cpp  linux_i2c_dev.cpp  mcp2221a_bus.cpp
libs/iap2/: CMakeLists.txt  link_layer.cpp  location_nmea.cpp  mcp2221a_mfi_signer.cpp  messages.cpp  test_framing.cpp  test_nmea.cpp
libs/mcp2221a/: CMakeLists.txt  mcp2221a.cpp  mcp2221a_i2c_scan.cpp
libs/pcan_trc_parser/: CMakeLists.txt
libs/pub_sub/: CMakeLists.txt  schema_registry.cpp  session_manager.cpp  test_expression_parser.cpp  zenoh_subscriber.cpp
libs/reflection/: CMakeLists.txt  test_reflection.cpp
mock_data/: CMakeLists.txt  mock_racegrade_tc8_frames.cpp  test_data_publisher.cpp
mock_data/data/: pdm32_log.trc  racegrade_tc8.trc
nodes/carplay/: CMakeLists.txt  iap2_session.cpp  iap2_session.h  main.cpp  simulate.cpp  simulate.h  usb_pipeline.cpp  usb_pipeline.h  zenoh_bridge.cpp  zenoh_bridge.h
nodes/grayhill_keypad/: CMakeLists.txt  main.cpp
nodes/inspect/: CMakeLists.txt  dump.cpp  dump.h  hz.cpp  info.cpp  list.cpp  main.cpp  nodes.cpp
nodes/megasquirt/: CMakeLists.txt  main.cpp  test_frames.cpp
nodes/motec_ltc/: CMakeLists.txt  main.cpp
nodes/motec_m1/: CMakeLists.txt  main.cpp
nodes/msel_master_relay/: CMakeLists.txt  main.cpp  msel_can_frame_parser.cpp
nodes/racegrade_tc8/: CMakeLists.txt  main.cpp  tc8_can_frame_parser.cpp
schemas/: CMakeLists.txt  can_frame.capnp  carplay_audio.capnp  carplay_call.capnp  carplay_input.capnp  carplay_location.capnp  carplay_nav.capnp  carplay_nowplaying.capnp  carplay_session.capnp  carplay_video.capnp  engine_data.capnp  engine_rpm.capnp  engine_telemetry.capnp  engine_temperature.capnp  grayhill_keypad.capnp  megasquirt.capnp  motec_ltc.capnp  motec_m1.capnp  motec_pdm.capnp  msel_master_relay.capnp  racegrade_tc8_configure.capnp  racegrade_tc8_signals.capnp  vehicle_odometer.capnp  vehicle_speed.capnp  vehicle_warnings.capnp
widgets/: CMakeLists.txt
widgets/carplay/: CMakeLists.txt  carplay_widget.cpp  dongle_driver.cpp  lsusb_output.txt  message.cpp  opengl_shaders.cpp  test_messages.cpp
widgets/circle_tachometer/: CMakeLists.txt  circle_tachometer.cpp
widgets/mercedes_190e_cluster_gauge/: CMakeLists.txt  mercedes_190e_cluster_gauge.cpp
widgets/mercedes_190e_speedometer/: CMakeLists.txt  mercedes_190e_speedometer.cpp  speedometerwidgetmph.cpp
widgets/mercedes_190e_tachometer/: CMakeLists.txt  mercedes_190e_tachometer.cpp  tachometerwidget.cpp
widgets/mercedes_190e_telltales/: CMakeLists.txt  battery_telltale.cpp  capnp_data_extractor.cpp
widgets/motec_c125_tachometer/: CMakeLists.txt
widgets/motec_cdl3_tachometer/: CMakeLists.txt  motec_cdl3_tachometer.cpp
widgets/sparkline/: CMakeLists.txt  sparkline.cpp  sparklineitem.cpp
(+201 files in other folders)
