# Widgets CMakeLists.txt
# This file manages all widget libraries under the widgets directory

cmake_minimum_required(VERSION 3.10)

# Add all widget subdirectories
add_subdirectory(mercedes_190e_telltales)
add_subdirectory(carplay)
add_subdirectory(mercedes_190e_speedometer)
add_subdirectory(mercedes_190e_tachometer)
add_subdirectory(mercedes_190e_cluster_gauge)
add_subdirectory(sparkline)
add_subdirectory(circle_tachometer)